[package]
name = "cairovm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
actix-web = "4.4.0"
actix-rt = "2.9.0"
serde = {version = "1.0.193", features = ["derive"]}
env_logger = "0.10.1"
actix-cors = "0.6.4"